# arch-rust-indexer

./: .env  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  REALTIME_INDEXING.md  TOKEN_BALANCES_README.md  config.example.yml  config.yml  docker-compose.yml  init.sql  websocket_test.rs
.github/workflows/: release.yml
.sqlx/: query-02638977689e77d619be18b7361d24006788ddfe96aa974c8d8e4a4eece728ac.json  query-0c4db264a26fa2c543f76b4f9b284201b75c682f7fe55d1782f4c8124ad30aa6.json  query-110273a3bb064f6f908e8dcf4d740363d37f06aeaf8c35aa8ce8bb52f87e562a.json  query-20813cb4d560d8cf0249c75937a203e20f6c309debea40fcd0b59a9cd9b60bf4.json  query-28190ae621eeb5fe8556191754bb171895c2cdae89735f0bef203cfbf0e6fcd2.json  query-281ad6b623849a9bf4c9e753b33ee9f363403f2e6518df50193ca5dfb6bfc151.json  query-2ab3e92d5ee3c13015917196a8c622070f925a8f2969af9a22e6c1ade5ab6349.json  query-32e99e40ad2248211ace68fa532af10c0fc7f7a1c022b10751aeb838b7514116.json  query-33522e7bc2e3fa5d43600e34944f1c41ed36a382e7c9040e6524205931f826be.json  query-3edeaae05a38b76e0bbb075d5a7274d6725dd8f415a2f8ec616c4ec8120f7d69.json  query-3f2360a30d1497437a073242c1ca24a216b2f447c5c20d1e7dd998bb17c2392a.json  query-574fb2cd6fdeccd4c7722629fa0bbe4a94e0552177104e9e29ce561c22f0ec21.json  query-5f5b192893b1da3326b094351a3fee46bf950d8ec34339cd3b2ac1264f6b86d5.json  query-6db31aab0727543807f01404dc6729b30b54b86f607e50585f67033d9ff51b57.json  query-7a88115c9d5b329c71bfeabad7c60a8573031ddf57981a62ad8a7638c17b88b3.json  query-7cc799bdc968276db09f4e832e526008975c07faeaa27134df0bbb4176317b25.json  query-87081d5a7969be4e53a135bff3295ebefb843d858dacbd1fdadeaa06999ae786.json  query-87f4e011d12f2e13397657a52c81aac9fe0a9c2ede2130cf7c8f157f0e226720.json  query-8afb66dff35ad1d99bf0e8ab8edcadb8413f62dbd898017b59845e94d064264c.json  query-8d2bc658e87ca4f70e9862c1843379135a488bfd7181e2ce14d8879b0e48f9c5.json  query-8e3c032a1f69ca82474c7deee6fa77d7353ef5b5fd79e15129f011b51a855ac5.json  query-8ec4b70a13e815516ab5e426d75cd9133825f4afbf434fdc241ef70b39b9da49.json  query-8fe56aaa25bf4922fc133e80ce13f651c8a03612ae6783e405f13337a46fdeba.json  query-90220cfba2e5747da71492261ae239ab920e9b6f55543085faf8b663bff5fbfa.json  query-9ace051ee2097c5613b5cece8afea1c83c052ac60364feaaa69ef89ba2b18ee1.json  query-9c6e44c79e79f226116cd3a8a96242c70af183e424a6a2727c1fc12564d29287.json  query-9f6c4865f34ff9c0bbab8fbd7442c64ba46c518a110a436a6a0dfe7a3dbe5989.json  query-a05ae390edecb7f56245556519c7d8b986dc374c1c50ed223b852ea944810db0.json  query-a72303993049bb249be2d12b9f91f80dc4a8100b1c1c05bfbd3a4b3c91a31c61.json  query-ab501b743b1d004df9dd9ef700b6100006d388f0d4aa564ed782cd4bc3e6f7fa.json  query-be6bde90f5e5e79884ab5be99e2f4db663c58d80e79888111483d5ac21842fe6.json  query-c0a26b5dcb7beccc02f0dd9eac2aaab827840afad2709e1ec012cb1d81ba1881.json  query-c88812e73053a9701e33b5eac4fa7b9722b359d0bcfd443fbe21057f35e1efa4.json  query-d9826b9a2c79ca46e132d09df2628b5025b4da2a8653d05296ee0dfc200eeeee.json  query-da254273d28a53c84451fd5415459b2b51f14d5ad417ec1d4e206a0b4785d461.json  query-dab5fbd6936ebd663f2a06fb9ef2c87fe33a74e0b8dd3404afbc762dd6d8a64f.json  query-de3ca05815e38d56df6b5efc5b1c230d303fe05f8b9862cddb139728c5606b19.json  query-dff39a0ff04c1972797f25544efb133a27c34b9d9c2428c2d2c24741ae1e31a5.json  query-ef28000a9f1d3d3e595771be55a4a3a7474af8ea9672f6bd3883ddedd96fbd82.json  query-f24bb7a8912cfbc48d3e6c8587408c2a563969fbe33f01f93bffd613ec9cf7e0.json  (+6 more)
arch-indexer-microservices/: README.md  config.yml  deploy_aws.sh  docker-compose.override.yml  docker-compose.yml  fix_timestamps_and_reset.sh  nginx.conf  test_blocks_api.sh
arch-indexer-microservices/api-server/: Cargo.toml  Dockerfile
arch-indexer-microservices/db-init/: 00_base_init.sql  10_consolidated_schema.sql  12_fix_timestamp_types.sql  (+12 more)
arch-indexer-microservices/indexer/: Cargo.toml  Dockerfile  config.yml
arch-indexer-microservices/indexer/src/: lib.rs  main.rs  pipeline_atlas.rs
arch-indexer-microservices/indexer/src/arch_rpc/: mod.rs  websocket.rs
arch-indexer-microservices/indexer/src/config/: settings.rs
arch-indexer-microservices/indexer/src/db/: mod.rs  models.rs
arch-indexer-microservices/indexer/src/indexer/: hybrid_sync.rs  mod.rs
deploy/: README.md
migrations/: 20240101000000_consolidated_schema.sql  20240320000000_add_created_at.sql  20240320000000_add_program_tables.sql  20241123171521_change_status_to_jsonb.sql  20241204000000_add_program_tables.sql  202412041000000_fix_program_trigger.sql  20241204190448_update_transaction_programs_trigger.sql  20241205133534_add_debugging.sql  20241205135513_normalize_program_id.sql  20241205135532_update_program_trigger.sql  20241205150126_fix_old_program_ids.sql  20241205165615_fix_trigger_normalization.sql  20241205170245_fix_program_id_dupes.sql  20241205175302_consolidate_program_handling.sql  20241205175658_fix_normalize_program_id.sql  20241205180402_fix_slow_query.sql  20241205180648_be_exact.sql  20241205181359_fix_remaining_ambiguity.sql  20241215000000_enhance_transaction_and_block_data.sql  20241215000001_add_mempool_tracking.sql  20250101000000_drop_program_trigger.sql  20250101000001_add_program_display_name.sql  20250103000000_add_token_balances.sql  20250103030000_harden_account_and_program_triggers.sql  20250103040000_triggers_on_update.sql  20250103041000_backfill_account_participation.sql  20250103042000_fix_normalize_program_id_arrays.sql  20250103043000_fix_account_participation_trigger.sql  20250103050000_fix_normalize_program_id_and_backfill.sql  20250103060000_token_indexing_triggers.sql  20250103061000_backfill_token_entities.sql  20250103062000_canonical_program_id.sql  20250103070000_backfill_native_balances.sql  20250908_add_accounts_table.sql  20250910_add_transactions_created_at_index.sql  init.sql
scripts/: apply_token_balances_migration.sh  compose_build.sh  setup_test_db.sh  validate_env.sh
src/: config.rs.bak  lib.rs  main.rs
websocket_test/: Cargo.toml  README.md  discover_ports.sh  server_test.sh  terminal_test.sh  test_endpoints.sh  test_formats.rs  ubuntu_test.sh
websocket_test/src/: main.rs
(+133 files in other folders)
