[package]
name = "arch-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = "0.7.9" 
hyper = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", default-features = false }
redis = { version = "0.23", features = ["tokio-comp"], default-features = false }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[lib]
name = "arch_indexer"
path = "src/lib.rs"

[[bin]]
name = "arch-indexer"
path = "src/main.rs"

[[bin]]
name = "init_db"
path = "src/bin/init_db.rs"