[package]
name = "arch-indexer"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = "0.7.9" 
clap = {  version = "4.3.1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
bs58 = "0.3.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", default-features = false }
redis = { version = "0.23", features = ["tokio-comp"], default-features = false }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
http-body-util = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
tokio-retry = "0.3"
hex = "0.4.3"

[lib]
name = "arch_indexer"
path = "src/lib.rs"

[[bin]]
name = "arch-indexer"
path = "src/main.rs"

[[bin]]
name = "init_db"
path = "src/bin/init_db.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }