[package]
name = "indexer"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tokio-tungstenite = "0.21"
url = "2.4"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
dashmap = "5.5"
hex = "0.4"
bs58 = "0.3"
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
dotenv = "0.15"
thiserror = "1.0"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", default-features = false }
tokio-retry = "0.3"
http-body-util = "0.1"
clap = { version = "4.5.45", features = ["derive"] }

[lib]
name = "indexer"
path = "src/lib.rs"

[[bin]]
name = "indexer"
path = "src/main.rs"
